<resources>
    <string name="app_name">YP_PlayList</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="find_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="black_theme">Темная тема</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="supportMessage">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="supportMail">support@yandex.ru</string>
    <string name="mailSubject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_development_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="errorSharingLink">Ошибка при сохранении ссылки</string>
    <string name="errorOpeningLink">Ошибка при открытии ссылки</string>
    <string name="errorOpeningEmail">Ошибка при обращении в по email</string>
    <string name="no_data">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>
    <string name="search_history_message">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="track_time">0:00</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="your_media_isEmpty">Ваша медиатека пуста</string>
    <string name="not_create_Playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="favourite">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="add_image">Добавить картинку</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="button_create">Создать</string>
    <string name="addPlaylist">Добавить плейлист</string>
    <string name="createPlaylist">Плейлист «%s» создан</string>
    <string name="name_playlist">Название плейлиста</string>
    <string name="count_tracks">0 треков</string>
    <string name="stop_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_playlist">Пустой плейлист</string>
    <string name="sharingApp">Выберите приложение для отправки</string>
    <string name="sharing">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlists">Хотите удалить плейлист?</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="editing">Редактировать</string>


    <string-array name="reserved_bypass_subnets" translatable="false">
        <item>1.0.0.0/8</item>
        <item>2.0.0.0/7</item>
        <item>4.0.0.0/6</item>
        <item>8.0.0.0/7</item>
        <item>11.0.0.0/8</item>
        <item>12.0.0.0/6</item>
        <item>16.0.0.0/4</item>
        <item>32.0.0.0/3</item>
        <item>64.0.0.0/3</item>
        <item>96.0.0.0/6</item>
        <item>100.0.0.0/10</item>
        <item>100.128.0.0/9</item>
        <item>101.0.0.0/8</item>
        <item>102.0.0.0/7</item>
        <item>104.0.0.0/5</item>
        <item>112.0.0.0/5</item>
        <item>120.0.0.0/6</item>
        <item>124.0.0.0/7</item>
        <item>126.0.0.0/8</item>
        <item>128.0.0.0/3</item>
        <item>160.0.0.0/5</item>
        <item>168.0.0.0/8</item>
        <item>169.0.0.0/9</item>
        <item>169.128.0.0/10</item>
        <item>169.192.0.0/11</item>
        <item>169.224.0.0/12</item>
        <item>169.240.0.0/13</item>
        <item>169.248.0.0/14</item>
        <item>169.252.0.0/15</item>
        <item>169.255.0.0/16</item>
        <item>170.0.0.0/7</item>
        <item>172.0.0.0/12</item>
        <item>172.32.0.0/11</item>
        <item>172.64.0.0/10</item>
        <item>172.128.0.0/9</item>
        <item>173.0.0.0/8</item>
        <item>174.0.0.0/7</item>
        <item>176.0.0.0/4</item>
        <item>192.0.1.0/24</item>
        <item>192.0.3.0/24</item>
        <item>192.0.4.0/22</item>
        <item>192.0.8.0/21</item>
        <item>192.0.16.0/20</item>
        <item>192.0.32.0/19</item>
        <item>192.0.64.0/18</item>
        <item>192.0.128.0/17</item>
        <item>192.1.0.0/16</item>
        <item>192.2.0.0/15</item>
        <item>192.4.0.0/14</item>
        <item>192.8.0.0/13</item>
        <item>192.16.0.0/13</item>
        <item>192.24.0.0/14</item>
        <item>192.28.0.0/15</item>
        <item>192.30.0.0/16</item>
        <item>192.31.0.0/17</item>
        <item>192.31.128.0/18</item>
        <item>192.31.192.0/22</item>
        <item>192.31.197.0/24</item>
        <item>192.31.198.0/23</item>
        <item>192.31.200.0/21</item>
        <item>192.31.208.0/20</item>
        <item>192.31.224.0/19</item>
        <item>192.32.0.0/12</item>
        <item>192.48.0.0/14</item>
        <item>192.52.0.0/17</item>
        <item>192.52.128.0/18</item>
        <item>192.52.192.0/24</item>
        <item>192.52.194.0/23</item>
        <item>192.52.196.0/22</item>
        <item>192.52.200.0/21</item>
        <item>192.52.208.0/20</item>
        <item>192.52.224.0/19</item>
        <item>192.53.0.0/16</item>
        <item>192.54.0.0/15</item>
        <item>192.56.0.0/13</item>
        <item>192.64.0.0/12</item>
        <item>192.80.0.0/13</item>
        <item>192.88.0.0/18</item>
        <item>192.88.64.0/19</item>
        <item>192.88.96.0/23</item>
        <item>192.88.98.0/24</item>
        <item>192.88.100.0/22</item>
        <item>192.88.104.0/21</item>
        <item>192.88.112.0/20</item>
        <item>192.88.128.0/17</item>
        <item>192.89.0.0/16</item>
        <item>192.90.0.0/15</item>
        <item>192.92.0.0/14</item>
        <item>192.96.0.0/11</item>
        <item>192.128.0.0/11</item>
        <item>192.160.0.0/13</item>
        <item>192.169.0.0/16</item>
        <item>192.170.0.0/15</item>
        <item>192.172.0.0/15</item>
        <item>192.174.0.0/16</item>
        <item>192.175.0.0/19</item>
        <item>192.175.32.0/20</item>
        <item>192.175.49.0/24</item>
        <item>192.175.50.0/23</item>
        <item>192.175.52.0/22</item>
        <item>192.175.56.0/21</item>
        <item>192.175.64.0/18</item>
        <item>192.175.128.0/17</item>
        <item>192.176.0.0/12</item>
        <item>192.192.0.0/10</item>
        <item>193.0.0.0/8</item>
        <item>194.0.0.0/7</item>
        <item>196.0.0.0/7</item>
        <item>198.0.0.0/12</item>
        <item>198.16.0.0/15</item>
        <item>198.20.0.0/14</item>
        <item>198.24.0.0/13</item>
        <item>198.32.0.0/12</item>
        <item>198.48.0.0/15</item>
        <item>198.50.0.0/16</item>
        <item>198.51.0.0/18</item>
        <item>198.51.64.0/19</item>
        <item>198.51.96.0/22</item>
        <item>198.51.101.0/24</item>
        <item>198.51.102.0/23</item>
        <item>198.51.104.0/21</item>
        <item>198.51.112.0/20</item>
        <item>198.51.128.0/17</item>
        <item>198.52.0.0/14</item>
        <item>198.56.0.0/13</item>
        <item>198.64.0.0/10</item>
        <item>198.128.0.0/9</item>
        <item>199.0.0.0/8</item>
        <item>200.0.0.0/7</item>
        <item>202.0.0.0/8</item>
        <item>203.0.0.0/18</item>
        <item>203.0.64.0/19</item>
        <item>203.0.96.0/20</item>
        <item>203.0.112.0/24</item>
        <item>203.0.114.0/23</item>
        <item>203.0.116.0/22</item>
        <item>203.0.120.0/21</item>
        <item>203.0.128.0/17</item>
        <item>203.1.0.0/16</item>
        <item>203.2.0.0/15</item>
        <item>203.4.0.0/14</item>
        <item>203.8.0.0/13</item>
        <item>203.16.0.0/12</item>
        <item>203.32.0.0/11</item>
        <item>203.64.0.0/10</item>
        <item>203.128.0.0/9</item>
        <item>204.0.0.0/6</item>
        <item>208.0.0.0/4</item>
    </string-array>

</resources>