<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsPageBackground"
    android:orientation="vertical"
    android:theme="@style/Theme.YP_PlayList.Settings">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/settings_toolbar"
        style="@style/panel_header_toolbar"
        app:title="@string/find_button" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/SearchForm"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/edittext"
            android:backgroundTint="@color/grey_tint_search"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/light_grey"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/find_button"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="255"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textCursorDrawable="@drawable/custom_cursor"/>

        <ImageView
            android:id="@+id/clear"
            style="@style/clear_button"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/light_grey"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/standard_margin"
            android:paddingTop="@dimen/padding_24" />

        <LinearLayout
            android:id="@+id/placeholderNothingWasFound"
            style="@style/search_plaseholder">

            <ImageView
                style="@style/search_image"
                android:src="@drawable/error_no_data" />

            <TextView
                style="@style/search_textview"
                android:text="@string/no_data" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholderCommunicationsProblem"
            style="@style/search_plaseholder">

            <ImageView
                style="@style/search_image"
                android:src="@drawable/error_no_connection" />

            <TextView
                style="@style/search_textview"
                android:text="@string/no_connection" />


            <Button
                android:id="@+id/button_return"
                style="@style/search_button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:inputType="textCapSentences"
                android:text="@string/refresh_button"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:text="@string/search_history_message"
                style="@style/you_search"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="48dp"
                android:paddingTop="@dimen/padding_24"/>

            <Button
                android:id="@+id/clearHistoryButton"
                style="@style/button_refresh"
                android:layout_marginTop="-48dp"
                android:text="@string/clear_history" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>