<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsPageBackground"
    android:orientation="vertical"
    android:theme="@style/Theme.YP_PlayList.Settings">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/settings_toolbar"
            style="@style/panel_header_toolbar"
            app:title="@string/settings_button" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="7"
            android:backgroundTint="@color/white"
            android:text="@string/black_theme"
            android:textColor="?attr/settingsPageTitleText"
            android:textSize="@dimen/text_16sp" />

        <Switch
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center_vertical"
            style="@style/Switcher_style"
            android:layout_weight="1"
            android:checked="false"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white"
            android:text="@string/share_application"
            android:textColor="?attr/settingsPageTitleText"
            android:textSize="@dimen/text_16sp"/>


        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/share_app"
             />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white"
            android:text="@string/write_to_support"
            android:textColor="?attr/settingsPageTitleText"
            android:textSize="@dimen/text_16sp"/>


        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/write_to_support"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white"
            android:text="@string/license_agreement"
            android:textColor="?attr/settingsPageTitleText"
            android:textSize="@dimen/text_16sp" />


        <Button
            style="@style/SettingsButton"
            app:icon="@drawable/terms_of_use"
            />
    </LinearLayout>

</LinearLayout>