<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_fon"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white_fon"
            android:stateListAnimator="@null"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:iconTint="@color/button_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_button"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="7"
            android:backgroundTint="@color/white_fon"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_margin" />

        <Switch
            android:id="@+id/switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="false"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white_fon"
            android:text="@string/share_application"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_margin"/>


        <Button
            android:layout_width="@dimen/page_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/white_fon"
            android:stateListAnimator="@null"
            app:icon="@drawable/share_app"
            app:iconGravity="end"
            app:iconTint="@color/light_grey" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white_fon"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_margin"/>


        <Button
            android:layout_width="@dimen/page_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/white_fon"
            android:stateListAnimator="@null"
            app:icon="@drawable/write_to_support"
            app:iconGravity="end"
            app:iconTint="@color/light_grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_weight="8"
            android:backgroundTint="@color/white_fon"
            android:text="@string/license_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_margin" />


        <Button
            android:layout_width="@dimen/page_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/white_fon"
            android:stateListAnimator="@null"
            app:icon="@drawable/terms_of_use"
            app:iconGravity="end"
            app:iconTint="@color/light_grey" />
    </LinearLayout>

</LinearLayout>