<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsPageBackground"
    android:orientation="vertical"
    android:theme="@style/Theme.YP_PlayList.Settings"
    tools:context=".medialibrary.playlists.ui.fragment.AddPlayListFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/standard_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/standard_margin" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewPlaylist"
        style="@style/panel_player_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/newPlaylist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cover_playlist_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/button_margins"
        android:layout_marginTop="@dimen/size26"
        android:layout_marginEnd="@dimen/button_margins"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@id/name_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbarNewPlaylist">

        <ImageView
            android:id="@+id/cover_playlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/add_playlist" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_playlist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/text_not"
        app:boxStrokeColor="@color/text_not_box_stroke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size32"
        android:hint="@string/playlist_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_playlist_cardview"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/small_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_playlist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/text_not"
        app:boxStrokeColor="@color/text_not_box_stroke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name_playlist"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_description_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/small_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size32"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:inputType="textCapSentences"
        android:padding="@dimen/size12"
        android:text="@string/button_create"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
